contact form init

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,6 @@
 REACT_APP_KEY = yourKeyHere
 REACT_APP_HOST = yourHostHere
+
+REACT_APP_TO_SERVICE_ID
+REACT_APP_TO_TEMPLATE_ID
+REACT_APP_TO_USER_ID
