--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "go-places",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://Alexa-Web-com.github.io/go-places",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
