--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "emailjs-com": "^3.2.0",
+    "eslint-plugin-cypress": "^2.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
